*drone-2.4.0 (15 Nov 2021)

  15 Nov 2021; Manuel Friedli <manuel@gentoo.org> +drone-2.4.0.ebuild,
  +files/drone.service-2.4.0:
  dev-util/drone: Add version 2.4.0.

*drone-2.0.4 (11 Jul 2021)

  11 Jul 2021; Manuel Friedli <manuel@gentoo.org> +drone-2.0.4.ebuild:
  dev-util/drone: Add ebuild for version 2.0.4

*drone-1.9.2-r1 (02 Jan 2021)

  02 Jan 2021; Manuel Friedli <manuel@gentoo.org> +drone-1.9.2-r1.ebuild,
  -drone-1.9.1-r1.ebuild, -drone-1.9.2.ebuild:
  dev-util/drone: Add !www-apps/drone as a dependency.

  14 Nov 2020; Manuel Friedli <manuel@gentoo.org> drone-1.9.2.ebuild:
  dev-util/drone: Fixes #67

*drone-1.9.2 (14 Nov 2020)

  14 Nov 2020; Manuel Friedli <manuel@gentoo.org> +drone-1.9.2.ebuild,
  files/drone.service:
  dev-util/drone: Fixes #66

*drone-1.9.1-r1 (08 Oct 2020)

  08 Oct 2020; Manuel Friedli <manuel@gentoo.org> +drone-1.9.1-r1.ebuild,
  -drone-1.9.1.ebuild, files/drone.service:
  dev-util/drone: Add fixed .service file.

  27 Sep 2020; Manuel Friedli <manuel@gentoo.org> -drone-1.2.3.ebuild,
  -drone-1.5.1.ebuild, -files/drone-1.2.3.confd, -files/drone-1.2.3.initd,
  -files/drone-1.5.1.confd, -files/drone-1.5.1.initd:
  dev-util/drone: Purge old ebuilds.

  25 Sep 2020; Manuel Friedli <manuel@gentoo.org> drone-1.9.1.ebuild,
  files/drone.sh:
  dev-util/drone: Handle all variables in config file generically.

*drone-1.9.1 (25 Sep 2020)

  25 Sep 2020; Manuel Friedli <manuel@gentoo.org> +drone-1.9.1.ebuild,
  +files/app.ini, +files/drone.service, +files/drone.sh:
  dev-util/drone: Add ebuild for drone 1.9.1; targeted at systemd.

*drone-1.5.1 (01 Oct 2019)

  01 Oct 2019;  <manuel@gentoo.org> +drone-1.5.1.ebuild,
  +files/drone-1.5.1.confd, +files/drone-1.5.1.initd, -drone-1.1.0.ebuild,
  -files/drone-1.1.0.confd, -files/drone-1.1.0.initd:
  dev-util/drone:  Add ebuild for version 1.5.1, purge ebuild for versoin 1.1.0.

*drone-1.2.3 (04 Aug 2019)

  04 Aug 2019; Manuel Friedli <manuel@fritteli.ch> +drone-1.2.3.ebuild,