@@ -1,7 +1,12 @@
 AUX app.ini-1.10.1 1547 BLAKE2B 6d00f1af1abe06a25459c99fc5a220233b1ab845ad0e1b8402b6d3697f19b5a12de1ae944dcaea7c9ad4a7767f2bcbac74101eb8e4319c49f108cee7335f0d16 SHA512 d79a00d0efb62923d2770d439cb790f9ab2bfde9b97b2ee6240559e68f26529c4cb9695d1487836d6998ab199de419f2ae6e277d22e414fb746e42588923c78c
+AUX drone-server.confd 1238 BLAKE2B efa7a96761fb7f57ce2d34396dce7c3fafc12942e45603bd89334e16f99f81c35d9334a7db14de7f42bfcedca34577d0c60430cf8470c843cf736e77d1065e87 SHA512 bbe3944eca8d82afd3161f53d9359422b2fb8985e69facd781a81f1c55ec647e8647f0fffc284375dc091b15ab5d665669cd6a2818ff62f4afe255e0a22a21cc
+AUX drone-server.initd 452 BLAKE2B b5eef00c2a68e6740bbfa4cfbe3cca0a5ae2c84698f2b4d5474af01c3729b10aeb1c481cd756639f6bfea9bd3da852a27668fd486eb1c2ed147fb881cf0b08d2 SHA512 7db112b982ee1ae5b65627f82cb4e262c91c245418decc0702bfe08f2c4cba6fe4604d9649044f4fdbc7886b5500df74c0f82aabf4be6cb590c4eed93e10ca5a
+AUX drone-server.service 466 BLAKE2B 5996e888fb0ddae46e3f9400dad36f69f94e1a13fdcc9028dc52f332ae9b286070d926d22d24e165b483ed5c5951b603012a86ce58b87cc0d73ddfeee8958c4b SHA512 43be529d61088c8b292f983e2104068b4d6b59f92fc59b625bc26e94ea34eb6fc85d4f66b7cb0ae812854c656061e3b11404dada0ac76a32f0edd85da8524d2a
 AUX drone.service-2.4.0 465 BLAKE2B c3a508fbb969b9ec3f0a7c30c4ec0bc5eef94f227d5fb414945cb08200e2c73b48171c6d3f8e3c79090a3b0c2c0f1128964426ed558dd0f8329d8ec10b363aa3 SHA512 5c80e881a877c96686a50eb237490c2f708a14ba0fd84c34f6cc324bdf73696bd48dfe04de92173637d05488666e4b6a87c39b5c1e858bd5e8cfffc4164a75b2
 DIST cloud.google.com%2Fgo%2F@v%2Fv0.26.0.mod 27 BLAKE2B 814b0fa8f12d5ce6171fa629b5a7eb34e0e882cc0c5430986896bb38c243e08dc83098f271227f4ba019e78f16dc97fbb381e833aff1819833d243b08add916b SHA512 5132f3438533427c0ab0fbb7a12112a7830ea9122662ed46019ff89c71d9cf80c02edc32dd5c892da572031b5a2cce100f2602fa6a19bea6be7c02781f701273
 DIST docker.io%2Fgo-docker%2F@v%2Fv1.0.0.mod 27 BLAKE2B b4fa741a29f2cc94d3897609787268661c19ab3a64eb1ad579ee7dc05310a4aef80fcd4784ad23ed0cd3a4baec7409a7acde2c919016e1f55752f05b650e10bd SHA512 81c7664481b2ac94ddf6c52ca21af8f87db0150b394d9602fb50c17c9ee56f05c6fd7fc3a3ccd5aaed25690cdd59bb4b6478ae942c24a5348154587250b2d7ca
+DIST drone-2.11.1-deps.tar.xz 135830428 BLAKE2B 8b1c42d6ebf445477018bb58776eea8b0d5133a99efc4fc366314c2985e534303d20fec704dcd6799bd6a050bf89f8d3a18e00c8030e4bc5211733827327047f SHA512 ae0b21475d716ceeddf44e449958d678e81a00b85cca71262e7093971b35a4432d0ae7252ffce561f76b19de7f71cb6798804de3f63dd832ed24d8fdf57800f4
+DIST drone-2.11.1.tar.gz 311271 BLAKE2B 319a04ca2fac7d43bfc86a94a6008d07aa2565967b849f824f4a9be688d629e2b41ad98cd8319549687c842545af12260daa435e29dc1d394fa22708bdb5970a SHA512 f782427321ed990f503041ed4a4a692133f89797a16453f4238648cbd8b924bc3fb473e991668f3cba8bde0dcf87c79a5a11c02c4dfe738dd82e94009f95a685
 DIST drone-2.4.0.tar.gz 304008 BLAKE2B 7095ecbb3ece029b1b63ae1297f2a257fe9cc5e48de1eb596a6f25efc4e77e371b712f7647fe5ef44d96183cb0ca4e2fe83064995fd942eefe8c2897f938652a SHA512 91d5bace2bea4aeaa97b49f16153261d6dbd986bff7239367a84a68a7327d4a0d0d0015cf78b2b1e42ccc8fb69516b924c4aff8b0e11d1dac96443cdbe90ae7f
 DIST github.com%2F!azure%2Fazure-pipeline-go%2F@v%2Fv0.2.1.mod 114 BLAKE2B 076d15a6625743dbc5baa1feb35668127bd5f390b60c80f044162dc587771709b6c41f91bb862110a120a90d5279944257b673fb39030e629992c80a822e565c SHA512 f3656f04c653b5651210e048b1663ed87b8899e4af6d2ccd0d3ed4ad97abe511d61e8b1f9a68582ffd49eb6b6e81c31ce955ffe79ab398836cb6fd5e37147a0e
 DIST github.com%2F!azure%2Fazure-pipeline-go%2F@v%2Fv0.2.1.zip 22164 BLAKE2B 37b8599d82a3f7b5cb43819c0fe424fcf55c5343f7738abf55fd855a133770f94fd98e7c5501c7d8f689f656d8ef38a2a28e56229f618cc66fcd7d308c021b0e SHA512 dd83c0e73f32a6370607e302d4b1a8c40c77d8e9829ceafaa290895b9a0b9973eb1363579f9fbe92a1ca21ae92b677e92e5021450636f3b5ef79b15012387740
@@ -414,6 +419,7 @@ DIST k8s.io%2Fapimachinery%2F@v%2Fv0.0.0-20181201231028-18a5ff3097b4.mod 27 BLAK
 DIST k8s.io%2Fclient-go%2F@v%2Fv9.0.0+incompatible.mod 24 BLAKE2B e7c6a4736834c042c1326573259f9b789da58f8c53cf0f36b47086b94fa9f5a94ad9b36baa17f7c437218eca6ac6293e4ff1e50378f27e94ef609ff249520261 SHA512 ec86bdb5262590a5169f49362588e90e95a0874fbf2bd670ea27dac7d883be2d7f56e8277336d7ead06f9068ea43375c8fc6f055e1322fc8f802550c927e6d85
 DIST k8s.io%2Fklog%2F@v%2Fv0.1.0.mod 19 BLAKE2B 2af8f84f1cc7227be731c55dbe33e87e9d4fbba134ae86b6a86bac30260f32c7f17422789189486b17e1a2b84cfdca35984dd6d6079aab621620e90da230a6ac SHA512 cd5afa0488338a1b22bb852219078d74d61f894fd075b60b22bf062dbc49ad16c1088ab55bc8ae72aeadb4f7fb9534b99adceeaf3913e47bbf00df1ead1c7aaf
 DIST sigs.k8s.io%2Fyaml%2F@v%2Fv1.1.0.mod 24 BLAKE2B d33080dbc62b185d029eb43f75d66328dbfa7c463a3117b3efd5419ab8e1e52cc6f5d5a288d553421025c785ec6948b3aa68588cae19bd325f6acc0d043bb5fb SHA512 78f6402daccb04510f4ef35ee457ee13e4f447fba8e6aa33b4d32aa666e925861bf3b3f22c5ba9573871ec7e830f99e4caae0969724a54eadf40e6a7ed7931a0
+EBUILD drone-2.11.1.ebuild 965 BLAKE2B 8536acc63b158548c1b5a789aceb1cf125ece7653c414227d838026c0dd1dc259f8acd8294bf14b8104ecbf72d6efaca7fe2e156a7923cf7f71ae0b98aa3bf14 SHA512 edb113b364c629884ad0edd1331d80ebf68bbc363be6c905d604df8cc595f04701666ce8192e35af8f1a73c7b915c134f4462c6e5b71fd5a51d3c167b146826c
 EBUILD drone-2.4.0.ebuild 23028 BLAKE2B aea3dcdef1ea51be7bb5be77c781360e4c9ae2d464b81611b42aefbd623a97985d823737befa1d47c4c29d2dc21bf74d80cdfd32c04846eca7b62224f8c480f4 SHA512 764b1a9c2afc85118990690c96525a5cd315e0e7a402cf97a8e41ffcfb83af4d7a238b62742a71103f166b95915e27fb970c16635fc5880b41ae49247a665e28
-MISC ChangeLog 2384 BLAKE2B 1c5bda28aabccfdd82ae5a2921c0b1fae8488593425de11f84a5e0ca2756c44fbd5becbd9b24c646aeae34a9924af5d1a6e9bc328e68f8770586070a568bb151 SHA512 cb891564fd8b66984f561b0397bfb3ad84b3aef9675b0617091146d97f253ab32a58a8b5c26dd68634e8a2418e2fcb2924931c85d274dcb601a49829b5c746a6
+MISC ChangeLog 2643 BLAKE2B 25aa0046ea3606c9084bee116261bc69026d096ebc0580077b9fe0ed5f3b3c1b13b68d471db75ee864f47d042032eb222ae8a1872ccd0b82213540148cc6ec48 SHA512 ae6e47ce8fe6bd3479687576035519ebe63f6cf3fd1b0bb561f8671048b30c1c50b15913209de642f522439ed1b773553e13df73e04e6cc35d027f1ad84a5bda
 MISC metadata.xml 388 BLAKE2B b31f55757af23dda8f8082dc1ac88e86430deaed43d46ae4a2041def1b5ceede2eef8d81457fe4cf9cd3078260016ee1dd8766e0822ce6e73795077fa45149bd SHA512 39e5ee9680f74b7a4bd0a6d21869fd87f59f1c1bd43f9d00d4f2142869779ed6212ea4835c0fea9c4a80e1b419fa33bd523852b0c2302e72ab18043e84c67628
