@@ -1,0 +1,47 @@
+# arguments for drone
+# See also http://readme.drone.io/admin/installation-reference/
+#DRONE_SECRET=
+#DRONE_DEBUG=false
+#DRONE_SERVER_CERT=
+#DRONE_SERVER_KEY=
+#DRONE_ADMIN=
+#DRONE_ORGS=
+#DRONE_OPEN=false
+#DRONE_YAML=.drone.yml
+#DRONE_CACHE_TTY=15m
+DRONE_DATABASE_DRIVER=sqlite3
+DRONE_DATABASE_DATASOURCE="/var/lib/drone/drone.sqlite"
+DRONE_GITHUB=true
+#DRONE_GITHUB_URL=https://github.com
+#DRONE_GITHUB_CLIENT=
+#DRONE_GITHUB_SECRET=
+#DRONE_GITHUB_SCOPE=
+#DRONE_GITHUB_GIT_USERNAME=
+#DRONE_GITHUB_GIT_PASSWORD=
+#DRONE_GITHUB_PRIVATE_MODE=false
+#DRONE_GITHUB_MERGE_REF=true
+#DRONE_GITHUB_CONTEXT=continuous-integration/drone
+#DRONE_GITHUB_SKIP_VERIFY=false
+#DRONE_GOGS=false
+#DRONE_GOGS_URL=
+#DRONE_GOGS_GIT_USERNAME=
+#DRONE_GOGS_GIT_PASSWORD=
+#DRONE_GOGS_PRIVATE_MODE=
+#DRONE_GOGS_SKIP_VERIFY=false
+#DRONE_BITBUCKET=false
+#DRONE_BITBUCKET_CLIENT=
+#DRONE_BITBUCKET_SECRET=
+#DRONE_STASH=false
+#DRONE_STASH_URL=
+#DRONE_STASH_CONSUMER_KEY=
+#DRONE_STASH_CONSUMER_RSA=
+#DRONE_STASH_GIT_USERNAME=
+#DRONE_STASH_GIT_PASSWORD=
+#DRONE_GITLAB=false
+#DRONE_GITLAB_URL=https://gitlab.com
+#DRONE_GITLAB_CLIENT=
+#DRONE_GITLAB_SECRET=
+#DRONE_GITLAB_GIT_USERNAME=
+#DRONE_GITLAB_GIT_PASSWORD=
+#DRONE_GITLAB_SKIP_VERIFY=false
+#DRONE_GITLAB_PRIVATE_MODE=false
